@@ -1,3 +1,5 @@
+* Add ModelTestCase
+* Add test for missing default model access
 * Report API refactorization
 * Add test for access rights of menu and actions
 * Allow to use the dotted notation for order parameters
